--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
       </div>
     </section>
     <section class="team">
-      <div class="container-team">
+      <div class="container">
         <h2 class="teamul">Our Team</h2>
+        <ul class="centerr">
       </div>
-           <ul class="centerr">
-          <li class="bak">
+        <li class="bak">
             <img src="./images/img1.jpg" width="264" alt="men 1">
             <div class="employee-info">
               <h3 class="titlee">Mark Guerrero</h3>
@@ -249,12 +249,10 @@
         <ul class="center">
           <li class="forty">
             <div class="sellers-cover-wrap">
-            <div><img src="./images/img5.jpg" width="360" alt="men 1"></div>
-            <div class="sellers-cover-container">
-              <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+        <img src="./images/img5.jpg" width="360" alt="men 1">
+          <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
-                </div>
             </div>
             <div class="app-info">
               <h3 class="name">Banking App</h3>
@@ -263,12 +261,12 @@
           </li>
           <li class="forty">
             <div class="sellers-cover-wrap">
-            <div><img src="./images/img6.jpg" width="360" alt="men 2"></div>
-            <div class="sellers-cover-container">
+          <img src="./images/img6.jpg" width="360" alt="men 2">
+           
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
-            </div>
+          
             </div>
             <div class="app-info">
               <h3 class="name">Cashless Payment</h3>
@@ -277,13 +275,11 @@
           </li>
           <li class="forty">
             <div class="sellers-cover-wrap">
-            <div><img src="./images/img7.jpg" width="360" alt="men 3"></div>
-            <div class="sellers-cover-container">
+           <img src="./images/img7.jpg" width="360" alt="men 3">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
-            </div>
-            </div>
+           </div>
             <div class="app-info">
               <h3 class="name">Meditation App</h3>
               <p class="team-pp">App</p>
@@ -291,8 +287,7 @@
           </li>
           <li class="forty">
             <div class="sellers-cover-wrap">
-            <div><img src="./images/img8.jpg" width="360" alt="women"></div>
-            <div class="sellers-cover-container">
+        <img src="./images/img8.jpg" width="360" alt="women">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
@@ -300,7 +295,6 @@
             <div class="app-info">
               <h3 class="name">Taxi Service</h3>
               <p class="team-pp">Marketing</p>
-            </div>
             </div>
           </li>
           <li class="forty">
@@ -315,16 +309,13 @@
               <h3 class="name">Screen Illustrations</h3>
               <p class="team-pp">Design</p>
             </div>
-            </div>
           </li>
           <li class="forty">
             <div class="sellers-cover-wrap">
-            <div><img src="./images/img10.jpg" width="360" alt="women"></div>
-            <div class="sellers-cover-container">
+          <img src="./images/img10.jpg" width="360" alt="women">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
-            </div>
             </div>
             <div class="app-info">
               <h3 class="name">Online Courses</h3>
@@ -336,12 +327,12 @@
     </section>
   </main>
   <footer class="footer">
-    <div class="container-footer">
+    <div class="container-footer container">
       <div><a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
       <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.</p>
     </div>
-    <div>
+    <div class="slow doun">
     <p class="text-footer-soc">Social media</p>
     <ul class="icon-list-foot">
       <li class="icon-item-footer">
