--- a/index.html
+++ b/index.html
@@ -97,8 +97,7 @@
       <div class="container">
         <h2 class="teamul">Our Team</h2>
         <ul class="centerr">
-      </div>
-        <li class="bak">
+          <li class="bak">
             <img src="./images/img1.jpg" width="264" alt="men 1">
             <div class="employee-info">
               <h3 class="titlee">Mark Guerrero</h3>
@@ -133,115 +132,115 @@
                   </a>
                 </li>
               </ul>
+              </div>
+              <li class="bak">
+                <img src="./images/img2.jpg" width="264" alt="men 2">
+                <div class="employee-info">
+                  <h3 class="titlee">Tom Ford</h3>
+                  <p class="team-p">Frontend Developer</p>
+                  <ul class="icon-list">
+                    <li class="icon-item">
+                      <a href="" class="icon-link">
+                        <svg class="antena" width="16" height="16">
+                          <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a href="" class="icon-link">
+                        <svg class="antena" width="16" height="16">
+                          <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a href="" class="icon-link">
+                        <svg class="antena" width="16" height="16">
+                          <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                      </a>
+                    </li>
+                    <li class="icon-item">
+                      <a href="" class="icon-link">
+                        <svg class="antena" width="16" height="16">
+                          <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                      </a>
+                    </li>
+                  </ul>
+                    </div>
+                  <li class="bak">
+                    <img src="./images/img3.jpg" width="264" alt="men 3">
+                    <div class="employee-info">
+                      <h3 class="titlee">Camila Garcia</h3>
+                      <p class="team-p">Marketing</p>
+                      <ul class="icon-list">
+                        <li class="icon-item">
+                          <a href="" class="icon-link">
+                            <svg class="antena" width="16" height="16">
+                              <use href="./images/icons.svg#icon-instagram-2"></use>
+                            </svg>
+                          </a>
+                        </li>
+                        <li class="icon-item">
+                          <a href="" class="icon-link">
+                            <svg class="antena" width="16" height="16">
+                              <use href="./images/icons.svg#icon-twitter-1"></use>
+                            </svg>
+                          </a>
+                        </li>
+                        <li class="icon-item">
+                          <a href="" class="icon-link">
+                            <svg class="antena" width="16" height="16">
+                              <use href="./images/icons.svg#icon-facebook-1"></use>
+                            </svg>
+                          </a>
+                        </li>
+                        <li class="icon-item">
+                          <a href="" class="icon-link">
+                            <svg class="antena" width="16" height="16">
+                              <use href="./images/icons.svg#icon-linkedin-1"></use>
+                            </svg>
+                          </a>
+                        </li>
+                      </ul>
+                     </div>
+                    <li class="bak"><img src="./images/img4.jpg" width="264" alt="women"></li>
+                      <div class="employee-info">
+                        <h3 class="titlee">Daniel Wilson</h3>
+                        <p class="team-p">UI Designer</p>
+                        <ul class="icon-list">
+                          <li class="icon-item">
+                            <a href="" class="icon-link">
+                              <svg class="antena" width="16" height="16">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                              </svg>
+                            </a>
+                          </li>
+                          <li class="icon-item">
+                            <a href="" class="icon-link">
+                              <svg class="antena" width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                              </svg>
+                            </a>
+                          </li>
+                          <li class="icon-item">
+                            <a href="" class="icon-link">
+                              <svg class="antena" width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                              </svg>
+                            </a>
+                          </li>
+                          <li class="icon-item">
+                            <a href="" class="icon-link">
+                              <svg class="antena" width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                              </svg>
+                            </a>
+                          </li>
+                        </ul>
             </div>
-            <li class="bak">
-            <img src="./images/img2.jpg" width="264" alt="men 2">
-            <div class="employee-info">
-              <h3 class="titlee">Tom Ford</h3>
-              <p class="team-p">Frontend Developer</p>
-              <ul class="icon-list">
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
             </div>
-            <li class="bak">
-            <img src="./images/img3.jpg" width="264" alt="men 3">
-            <div class="employee-info">
-              <h3 class="titlee">Camila Garcia</h3>
-              <p class="team-p">Marketing</p>
-              <ul class="icon-list">
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-            </div>
-            <li class="bak"><img src="./images/img4.jpg" width="264" alt="women">
-            <div class="employee-info">
-              <h3 class="titlee">Daniel Wilson</h3>
-              <p class="team-p">UI Designer</p>
-              <ul class="icon-list">
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-          </div>
-            </ul>
     </section>
     <section class="portfolio">
       <div class="container">
@@ -266,7 +265,6 @@
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
-          
             </div>
             <div class="app-info">
               <h3 class="name">Cashless Payment</h3>
@@ -336,33 +334,28 @@
     <p class="text-footer-soc">Social media</p>
     <ul class="icon-list-foot">
       <li class="icon-item-footer">
-
-        <a href="" class="icon-linkd">
+      <a href="" class="icon-linkd">
           <svg class="antena" width="24" height="24">
             <use href="./images/icons.svg#icon-instagram-2"></use>
           </svg>
         </a>
       </li>
-
       <li class="icon-item-footer">
-
-        <a href="" class="icon-linkd">
+      <a href="" class="icon-linkd">
           <svg class="antena" width="24" height="24">
             <use href="./images/icons.svg#icon-twitter-1"></use>
           </svg>
         </a>
       </li>
       <li class="icon-item-footer">
-
-        <a href="" class="icon-linkd">
+       <a href="" class="icon-linkd">
           <svg class="antena" width="24" height="24">
             <use href="./images/icons.svg#icon-facebook-1"></use>
           </svg>
         </a>
       </li>
       <li class="icon-item-footer">
-
-        <a href="" class="icon-linkd">
+      <a href="" class="icon-linkd">
           <svg class="antena" width="24" height="24">
             <use href="./images/icons.svg#icon-linkedin-1"></use>
           </svg>
