--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -205,7 +204,8 @@
                         </li>
                       </ul>
                      </div>
-                    <li class="bak"><img src="./images/img4.jpg" width="264" alt="women"></li>
+                    <li class="bak">
+                    <img src="./images/img4.jpg" width="264" alt="women"></li>
                       <div class="employee-info">
                         <h3 class="titlee">Daniel Wilson</h3>
                         <p class="team-p">UI Designer</p>
@@ -239,8 +239,9 @@
                             </a>
                           </li>
                         </ul>
-            </div>
-            </div>
+                        </div>
+          </ul>
+        </div>
     </section>
     <section class="portfolio">
       <div class="container">
@@ -261,8 +262,7 @@
           <li class="forty">
             <div class="sellers-cover-wrap">
           <img src="./images/img6.jpg" width="360" alt="men 2">
-           
-              <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
+            <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
             </div>
@@ -297,7 +297,7 @@
           </li>
           <li class="forty">
            <div class="sellers-cover-wrap">
-             <div><img src="./images/img9.jpg" width="360" alt="women"></div>
+             <img src="./images/img9.jpg" width="360" alt="women">
             <div class="sellers-cover-container">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
@@ -307,7 +307,9 @@
               <h3 class="name">Screen Illustrations</h3>
               <p class="team-pp">Design</p>
             </div>
-          </li>
+            </li>↩
+            </ul>↩
+            </div>↩
           <li class="forty">
             <div class="sellers-cover-wrap">
           <img src="./images/img10.jpg" width="360" alt="women">
@@ -322,6 +324,7 @@
           </li>
         </ul>
       </div>
+          </div>
     </section>
   </main>
   <footer class="footer">
