--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -95,154 +96,65 @@
     <section class="team">
       <div class="container">
         <h2 class="teamul">Our Team</h2>
+        <ul class="icon-list">
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-twitter-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-facebook-1"></use>
+              </svg>
+            </a>
+          </li>
+          <li class="icon-item">
+            <a href="" class="icon-link">
+              <svg class="antena" width="16" height="16">
+                <use href="./images/icons.svg#icon-linkedin-1"></use>
+              </svg>
+            </a>
+          </li>
+        </ul>
+        </div>
         <ul class="centerr">
           <li class="bak">
             <img src="./images/img1.jpg" width="264" alt="men 1">
             <div class="employee-info">
               <h3 class="titlee">Mark Guerrero</h3>
-              <p class="team-p">Product Designer</p>
-              <ul class="icon-list">
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-instagram-2"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-twitter-1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-facebook-1"></use>
-                    </svg>
-                  </a>
-                </li>
-                <li class="icon-item">
-                  <a href="" class="icon-link">
-                    <svg class="antena" width="16" height="16">
-                      <use href="./images/icons.svg#icon-linkedin-1"></use>
-                    </svg>
-                  </a>
-                </li>
-              </ul>
-              </div>
+              <p class="team-p">Product Designer</p></div>
+              </li>
               <li class="bak">
                 <img src="./images/img2.jpg" width="264" alt="men 2">
                 <div class="employee-info">
                   <h3 class="titlee">Tom Ford</h3>
-                  <p class="team-p">Frontend Developer</p>
-                  <ul class="icon-list">
-                    <li class="icon-item">
-                      <a href="" class="icon-link">
-                        <svg class="antena" width="16" height="16">
-                          <use href="./images/icons.svg#icon-instagram-2"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a href="" class="icon-link">
-                        <svg class="antena" width="16" height="16">
-                          <use href="./images/icons.svg#icon-twitter-1"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a href="" class="icon-link">
-                        <svg class="antena" width="16" height="16">
-                          <use href="./images/icons.svg#icon-facebook-1"></use>
-                        </svg>
-                      </a>
-                    </li>
-                    <li class="icon-item">
-                      <a href="" class="icon-link">
-                        <svg class="antena" width="16" height="16">
-                          <use href="./images/icons.svg#icon-linkedin-1"></use>
-                        </svg>
-                      </a>
-                    </li>
-                  </ul>
-                    </div>
+                  <p class="team-p">Frontend Developer</p></div>
+                  </li>
+                  
                   <li class="bak">
                     <img src="./images/img3.jpg" width="264" alt="men 3">
                     <div class="employee-info">
                       <h3 class="titlee">Camila Garcia</h3>
-                      <p class="team-p">Marketing</p>
-                      <ul class="icon-list">
-                        <li class="icon-item">
-                          <a href="" class="icon-link">
-                            <svg class="antena" width="16" height="16">
-                              <use href="./images/icons.svg#icon-instagram-2"></use>
-                            </svg>
-                          </a>
-                        </li>
-                        <li class="icon-item">
-                          <a href="" class="icon-link">
-                            <svg class="antena" width="16" height="16">
-                              <use href="./images/icons.svg#icon-twitter-1"></use>
-                            </svg>
-                          </a>
-                        </li>
-                        <li class="icon-item">
-                          <a href="" class="icon-link">
-                            <svg class="antena" width="16" height="16">
-                              <use href="./images/icons.svg#icon-facebook-1"></use>
-                            </svg>
-                          </a>
-                        </li>
-                        <li class="icon-item">
-                          <a href="" class="icon-link">
-                            <svg class="antena" width="16" height="16">
-                              <use href="./images/icons.svg#icon-linkedin-1"></use>
-                            </svg>
-                          </a>
-                        </li>
-                      </ul>
-                     </div>
-                    <li class="bak">
-                    <img src="./images/img4.jpg" width="264" alt="women"></li>
+                      <p class="team-p">Marketing</p></div>
+                      </li>
+                    <li class="bak"><img src="./images/img4.jpg" width="264" alt="women">
                       <div class="employee-info">
                         <h3 class="titlee">Daniel Wilson</h3>
                         <p class="team-p">UI Designer</p>
-                        <ul class="icon-list">
-                          <li class="icon-item">
-                            <a href="" class="icon-link">
-                              <svg class="antena" width="16" height="16">
-                                <use href="./images/icons.svg#icon-instagram-2"></use>
-                              </svg>
-                            </a>
-                          </li>
-                          <li class="icon-item">
-                            <a href="" class="icon-link">
-                              <svg class="antena" width="16" height="16">
-                                <use href="./images/icons.svg#icon-twitter-1"></use>
-                              </svg>
-                            </a>
-                          </li>
-                          <li class="icon-item">
-                            <a href="" class="icon-link">
-                              <svg class="antena" width="16" height="16">
-                                <use href="./images/icons.svg#icon-facebook-1"></use>
-                              </svg>
-                            </a>
-                          </li>
-                          <li class="icon-item">
-                            <a href="" class="icon-link">
-                              <svg class="antena" width="16" height="16">
-                                <use href="./images/icons.svg#icon-linkedin-1"></use>
-                              </svg>
-                            </a>
-                          </li>
-                        </ul>
-                        </div>
-          </ul>
-        </div>
-    </section>
+                      </div>
+                    </li>
+                    </ul>
+                    </section>
     <section class="portfolio">
       <div class="container">
         <h2 class="teamul">Our Portfolio</h2>
@@ -298,7 +210,6 @@
           <li class="forty">
            <div class="sellers-cover-wrap">
              <img src="./images/img9.jpg" width="360" alt="women">
-            <div class="sellers-cover-container">
               <p class="sellers-cover-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker
                 App · Exotic Fruit Ecommerce App ·
                 Cloud Storage App</p>
@@ -307,9 +218,7 @@
               <h3 class="name">Screen Illustrations</h3>
               <p class="team-pp">Design</p>
             </div>
-            </li>↩
-            </ul>↩
-            </div>↩
+            </li>
           <li class="forty">
             <div class="sellers-cover-wrap">
           <img src="./images/img10.jpg" width="360" alt="women">
@@ -324,7 +233,6 @@
           </li>
         </ul>
       </div>
-          </div>
     </section>
   </main>
   <footer class="footer">
