--- a/index.html
+++ b/index.html
@@ -96,64 +96,156 @@
     <section class="team">
       <div class="container">
         <h2 class="teamul">Our Team</h2>
-        <ul class="icon-list">
-          <li class="icon-item">
-            <a href="" class="icon-link">
-              <svg class="antena" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-item">
-            <a href="" class="icon-link">
-              <svg class="antena" width="16" height="16">
-                <use href="./images/icons.svg#icon-twitter-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-item">
-            <a href="" class="icon-link">
-              <svg class="antena" width="16" height="16">
-                <use href="./images/icons.svg#icon-facebook-1"></use>
-              </svg>
-            </a>
-          </li>
-          <li class="icon-item">
-            <a href="" class="icon-link">
-              <svg class="antena" width="16" height="16">
-                <use href="./images/icons.svg#icon-linkedin-1"></use>
-              </svg>
-            </a>
-          </li>
-        </ul>
-        </div>
         <ul class="centerr">
           <li class="bak">
             <img src="./images/img1.jpg" width="264" alt="men 1">
             <div class="employee-info">
               <h3 class="titlee">Mark Guerrero</h3>
-              <p class="team-p">Product Designer</p></div>
+              <p class="team-p">Product Designer</p>
+            <ul class="icon-list">
+              <li class="icon-item">
+                <a href="" class="icon-link">
+                  <svg class="antena" width="16" height="16">
+                    <use href="./images/icons.svg#icon-instagram-2"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-item">
+                <a href="" class="icon-link">
+                  <svg class="antena" width="16" height="16">
+                    <use href="./images/icons.svg#icon-twitter-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-item">
+                <a href="" class="icon-link">
+                  <svg class="antena" width="16" height="16">
+                    <use href="./images/icons.svg#icon-facebook-1"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="icon-item">
+                <a href="" class="icon-link">
+                  <svg class="antena" width="16" height="16">
+                    <use href="./images/icons.svg#icon-linkedin-1"></use>
+                  </svg>
+                </a>
+              </li>
+            </ul>
+          </div>
               </li>
               <li class="bak">
                 <img src="./images/img2.jpg" width="264" alt="men 2">
                 <div class="employee-info">
                   <h3 class="titlee">Tom Ford</h3>
-                  <p class="team-p">Frontend Developer</p></div>
+                  <p class="team-p">Frontend Developer</p>
+                <ul class="icon-list">
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="antena" width="16" height="16">
+                        <use href="./images/icons.svg#icon-instagram-2"></use>
+                      </svg>
+                    </a>
                   </li>
-                  
-                  <li class="bak">
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="antena" width="16" height="16">
+                        <use href="./images/icons.svg#icon-twitter-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="antena" width="16" height="16">
+                        <use href="./images/icons.svg#icon-facebook-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="icon-item">
+                    <a href="" class="icon-link">
+                      <svg class="antena" width="16" height="16">
+                        <use href="./images/icons.svg#icon-linkedin-1"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </div>
+                  </li>
+                   <li class="bak">
                     <img src="./images/img3.jpg" width="264" alt="men 3">
                     <div class="employee-info">
                       <h3 class="titlee">Camila Garcia</h3>
-                      <p class="team-p">Marketing</p></div>
+                      <p class="team-p">Marketing</p>
+                    <ul class="icon-list">
+                      <li class="icon-item">
+                        <a href="" class="icon-link">
+                          <svg class="antena" width="16" height="16">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                          </svg>
+                        </a>
+                      </li>
+                      <li class="icon-item">
+                        <a href="" class="icon-link">
+                          <svg class="antena" width="16" height="16">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                          </svg>
+                        </a>
+                      </li>
+                      <li class="icon-item">
+                        <a href="" class="icon-link">
+                          <svg class="antena" width="16" height="16">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                          </svg>
+                        </a>
+                      </li>
+                      <li class="icon-item">
+                        <a href="" class="icon-link">
+                          <svg class="antena" width="16" height="16">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                          </svg>
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                       </li>
                     <li class="bak"><img src="./images/img4.jpg" width="264" alt="women">
                       <div class="employee-info">
                         <h3 class="titlee">Daniel Wilson</h3>
                         <p class="team-p">UI Designer</p>
+                        <ul class="icon-list">
+                          <li class="icon-item">
+                            <a href="" class="icon-link">
+                              <svg class="antena" width="16" height="16">
+                                <use href="./images/icons.svg#icon-instagram-2"></use>
+                              </svg>
+                            </a>
+                          </li>
+                          <li class="icon-item">
+                            <a href="" class="icon-link">
+                              <svg class="antena" width="16" height="16">
+                                <use href="./images/icons.svg#icon-twitter-1"></use>
+                              </svg>
+                            </a>
+                          </li>
+                          <li class="icon-item">
+                            <a href="" class="icon-link">
+                              <svg class="antena" width="16" height="16">
+                                <use href="./images/icons.svg#icon-facebook-1"></use>
+                              </svg>
+                            </a>
+                          </li>
+                          <li class="icon-item">
+                            <a href="" class="icon-link">
+                              <svg class="antena" width="16" height="16">
+                                <use href="./images/icons.svg#icon-linkedin-1"></use>
+                              </svg>
+                            </a>
+                          </li>
+                        </ul>
                       </div>
                     </li>
                     </ul>
+                    </div>
                     </section>
     <section class="portfolio">
       <div class="container">
@@ -237,11 +329,11 @@
   </main>
   <footer class="footer">
     <div class="container-footer container">
-      <div><a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
+      <div class="slow doun"><a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
       <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.</p>
     </div>
-    <div class="slow doun">
+    <div>
     <p class="text-footer-soc">Social media</p>
     <ul class="icon-list-foot">
       <li class="icon-item-footer">
