--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
   </main>
   <footer class="footer">
     <div class="container-footer container">
-      <div class="slow doun"><a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
+      <div class="slow doun" style="margin-right: 120px;"><a class="logo-footer" href="./index.html">Web<span class="logo-partt">Studio</span></a>
       <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.</p>
     </div>
